# shein-extractor

./: .dockerignore  .env.example  .env.hostinger.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT_PLAN.md  Dockerfile  HOSTINGER_DEPLOYMENT.md  PROJECT_LOG.md  README.md  _bootstrap.py  app.py  compose.hostinger.yml  diagnose_link.py  extract_cart.py  invoice_parser.py  models.py  pdf_export.py  pyproject.toml  requirements.txt
outputs/: H-2237-اكرام-عبدالله-20260722-041212.json  H-2237-اكرام-عبدالله-20260722-055655.json  H-2237-اكرام-عبدالله-20260722-062237.json  H-2237-اكرام-عبدالله-20260722-071757.json  H-2257-افراح-الجبري-20260722-090529.json  H-2259-رهف-بسام-20260723-124950.json  T-500-هاشم-الذيباني-20260722-041425.json  T-500-هاشم-الذيباني-20260722-054015.json  T-500-هاشم-الذيباني-20260722-055440.json  T-501-حياة-شطوان-20260722-041239.json  T-502-اسماء-الحطامي-A-20260722-074902.json  T-502-امنيه-عبدالرقيب-20260722-074604.json  T-502-منال-سعيد-20260722-083026.json  cart-792897405-20260717-070253.json  cart-801526900-20260717-055052.json  cart-801551150-20260717-063333.json  cart-801551150-20260717-073349.json  cart-802609185-20260717-060731.json  cart-802609185-20260717-061910.json  shein-cart-20260717-121109.json  shein-cart-20260717-121240.json  shein-cart-20260717-172857.json  shein-cart-20260717-190802.json  shein-cart-20260722-005818.json  shein-cart-20260722-010639.json  shein-cart-20260722-011347.json  shein-cart-20260722-011539.json  shein-cart-20260722-011633.json  shein-cart-20260722-011942.json  shein-cart-20260722-012149.json  (+9 more)
(+60 files in other folders)
